Allow preview features in tests.